--- a/package.json
+++ b/package.json
@@ -1,20 +1,19 @@
 {
   "name": "selfcare",
   "version": "0.0.1",
-  "description": "SelfCare Site",
+  "description": "SelfCare",
   "main": "gulpfile.js",
   "dependencies": {
+    "crypto-js": "^3.1.6",
     "gulp": "^3.9.0",
     "gulp-angular-templatecache": "^1.7.0",
     "gulp-clean": "^0.3.1",
     "gulp-concat": "^2.6.0",
     "gulp-connect": "^2.2.0",
     "gulp-copy": "0.0.2",
-    "gulp-ftp": "^1.0.4",
     "gulp-gzip": "^1.2.0",
     "gulp-imagemin": "^2.3.0",
     "gulp-inline": "0.0.15",
-    "gulp-install": "^0.6.0",
     "gulp-minify-css": "^1.2.1",
     "gulp-minify-html": "^1.0.4",
     "gulp-open": "^1.0.0",
@@ -29,7 +28,8 @@
     "gulp-util": "^3.0.6",
     "gulp-wait": "0.0.2",
     "gulp-watch": "^4.3.5",
-    "gulp-zip": "^3.0.2"
+    "gulp-zip": "^3.0.2",
+    "vinyl-ftp": "^0.4.5"
   },
   "devDependencies": {},
   "scripts": {
