--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gulp-wait": "0.0.2",
     "gulp-watch": "^4.3.5",
     "gulp-zip": "^3.0.2",
+    "orchestrator": "^0.3.7",
     "vinyl-ftp": "^0.4.5"
   },
   "devDependencies": {},
