--- a/bower.json
+++ b/bower.json
@@ -30,7 +30,8 @@
     "ui-router": "~0.2.15",
     "angular-animate": "~1.4.6",
     "fancyBox": "fancybox#~2.1.5",
-    "jStorage": "~0.4.12"
+    "jStorage": "~0.4.12",
+    "angular-loading-bar": "~0.8.0"
   },
   "resolutions": {
     "angular": "1.4.8"
