--- a/bower.json
+++ b/bower.json
@@ -31,7 +31,8 @@
     "angular-animate": "~1.4.6",
     "fancyBox": "fancybox#~2.1.5",
     "jStorage": "~0.4.12",
-    "angular-loading-bar": "~0.8.0"
+    "angular-loading-bar": "~0.8.0",
+    "ngInfiniteScroll": "~1.2.2"
   },
   "resolutions": {
     "angular": "1.4.8"
