--- a/bower.json
+++ b/bower.json
@@ -16,11 +16,10 @@
   ],
   "dependencies": {
     "angular": "~1.4.3",
-    "angular-bootstrap": "~0.14.3",
+    "angular-bootstrap": "^1.3.3",
     "angular-flexslider": "~1.3.2",
     "angular-recaptcha": "~2.2.4",
     "angular-sanitize": "~1.4.3",
-    "angular-ui": "~0.4.0",
     "animate.css": "~3.3.0",
     "bootstrap-sass": "~3.3.5",
     "bourbon": "~4.2.5",
