--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,7 @@
   ],
   "dependencies": {
     "angular": "~1.4.3",
-    "angular-bootstrap": "^1.3.3",
+    "angular-bootstrap": "~0.14.3",
     "angular-flexslider": "~1.3.2",
     "angular-recaptcha": "~2.2.4",
     "angular-sanitize": "~1.4.3",
@@ -27,7 +27,7 @@
     "jquery": "~2.1.4",
     "lodash": "~3.10.0",
     "ui-router": "~0.2.15",
-    "angular-animate": "~1.4.6",
+    "angular-animate": "^1.5.7",
     "fancyBox": "fancybox#~2.1.5",
     "jStorage": "~0.4.12",
     "angular-loading-bar": "~0.8.0",
